sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: ';' expected but '=' found.
    v:Int=getValeur(k);
         ^AlgInsertionSort:7: error: ';' expected but '=' found.
      c:Int=getValeur(l)
           ^