sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n:Int=getNombreValeurs()
  for ( k <- 1 to (n-1)){
    v:Int=getValeur(k);
    for (l <- (k-1) to 0 by -1){
      c:Int=getValeur(l)
      if (compa > stock){
        setValeur((l+1),compa)
      }else {
        setValeur((l+1),stock)
        l=0
      }
    }
  }
}